--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-spring": "^9.5.5",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@types/node": "18.11.0",
